--- a/resources/sass/_navigation.scss
+++ b/resources/sass/_navigation.scss
@@ -198,6 +198,7 @@
 	z-index: -1;
 	transition: all 0.65s ease-in-out;
 	overflow-x: hidden;
+	opacity: 0;
 	ul {
 		padding: 20px;
 		margin: 0;
@@ -232,6 +233,7 @@
 	&.show {
 		transform: translateY(100%);
 		z-index: 80;
+		opacity: 1;
 	}
 }
 
